# claude-code-cli-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.prod.example.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
docs/: LOCAL_CONFIG.example.md
src/api/: dependencies.py  main.py  state.py
src/api/routes/: health.py  query.py  sessions.py
src/core/: config.py  exceptions.py  logging.py  security.py
src/middleware/: auth.py  logging.py  metrics.py  rate_limit.py  validation.py
src/models/: request.py  response.py
src/services/: alerting.py  circuit_breaker.py  claude_executor.py  session_cache.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_flow.py
tests/integration/: test_executor.py  test_routes.py
tests/unit/: test_alerting.py  test_config.py  test_exceptions.py  test_logging.py  test_request.py  test_response.py  test_security.py  test_session_cache.py  test_state.py
