[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-cli-api"
version = "1.0.0"
description = "Headless API service for Claude Code CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file
# Needed for lazy imports to avoid circular dependencies
"src/services/claude_executor.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
# Disable some strict checks for gradual adoption
warn_return_any = false
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.middleware.*"
# Middleware returns Response from call_next which is Any
disable_error_code = ["no-any-return"]
